--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
@@ -18,6 +19,7 @@
     "react-modal": "^3.16.3",
     "react-tsparticles": "^2.12.2",
     "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.5",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
   },
